# bitlocker-unlock-macos

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bl  bl-mount  bl-open  build.sh
.github/workflows/: ci.yml
BitLockerUnlock/: AppIcon.icns  INTERFACES.md  Package.swift  gen-icon.swift  make-app.sh  verify-bundle.sh
BitLockerUnlock/Sources/BitLockerUnlock/: App.swift  AppState.swift  BackendBridge.swift  DriveWatcher.swift
BitLockerUnlock/Sources/BitLockerUnlock/Chrome/: BLMenuBarExtra.swift  PreferencesPopover.swift
BitLockerUnlock/Sources/BitLockerUnlock/Models/: Drive.swift  UnlockEvent.swift  UnlockMethod.swift
BitLockerUnlock/Sources/BitLockerUnlock/Screens/: DecryptingView.swift  DetectedView.swift  EmptyView.swift  ErrorView.swift  MountedView.swift  UnlockSheetView.swift
MacOS Bit Locker/: BitLocker Unlock.html  app.jsx  screens.jsx
docs/: INSTALL.md
docs/man/: bitlocker-decrypt.1  bitlocker-info.1  bitlocker-mount.1
docs/security/: SECURITY_REVIEW_2026-05-18.md  SECURITY_REVIEW_2026-05-18.scorecard.json
docs/security/sections/: 01-auth.md  02-input-validation.md  03-privilege.md  04-injection.md  05-filesystem.md  06-logging.md  07-supply-chain.md
homebrew/: bitlocker-macos.rb
src/bitlocker-crypto/: CMakeLists.txt  bitlocker_crypto.c  bitlocker_crypto.h
src/cli/: CMakeLists.txt  bitlocker_decrypt.c  bitlocker_info.c  bitlocker_mount.c
src/macos-fuse/: CMakeLists.txt  macos_fuse.c  macos_fuse.h
tests/: CMakeLists.txt  test_crypto.c
